# varroa_challange

./: CMakeLists.txt  cascade.xml  common.cpp  common.hpp  extract_background.cpp  extract_background.hpp  log.cpp  log.hpp  main.cpp  urls.txt  varozacounter.cpp  varozacounter.hpp
